@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" content="text/html">
     <title>{{# if page_title }}{{page_title}} - {{/if}}{{site_title}}</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="{{host}}/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="header">
