@@ -1,3 +1,6 @@
+04 Oct 2021; Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>:
+	* Fix CSS loading and navigation links on debug mode
+
 07 Sep 2021; Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>:
 	* Convert SASS to CSS (style.css)
 	* Migrate to a static site by using Rust
